--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 	<div class="container">
+		<div class="badge">
+			<div class="badge-content">BuyList</div>
+			<div class="badge-content-print">Автор: Мошковський Іван</div>
+		</div>
 		<div class = "firstRectangle">
 		<section class="firstLine">
 			<input type="text" class="typeArea" name="plusProduct" placeholder="Назва товару">
@@ -47,7 +51,9 @@
 			<label class="product3">Сир</label>
 			<section class ="buttonsSect">
 			<button type="button" class="minusButton" data-tooltip="-">-</button>
+				<section class="number">
 			<label class="number">1</label>
+				</section>
 			<button type="button" class="plusButton" data-tooltip="+">+</button>
 			</section>
 			<section class="cancelBought">
@@ -58,10 +64,11 @@
 		</div>
 		<div class = "secondRectangle">
 		<section class="firstLine2">
-			<h1>Залишилося</h1>
+			<h1 >Залишилося</h1>
 		</section>
 			<hr>
 		<section class="secondLine2">
+			<section class="info">
 			<section class="amount1">
 				<label>Помідори</label>
 				<label class="amount">2</label>
@@ -73,6 +80,7 @@
 			<section class="amount1">
 				<label>Сир</label>
 				<label class="amount">1</label>
+			</section>
 			</section>
 		</section>
 			<hr>
